@@ -10,10 +10,12 @@ htmlentities. (#000002, #000006)
 exist (#000017)
 * Added German translation (Piratos)
 * Added new div and swaptitledate parameter to News module
+* Fixed html blobs so that they can  handle smarty functions inside of them.
 * Fixed email in add/edit user to accept 255 characters (#000003)
 * Fixed htmlblob NOTICE level messages (#000005)
 * Fixed delete confirmation text in file management (#000012)
-* Fixed java syntax highlighting to submit if advnaced wasn't expanded (#0000016)
+* Fixed java syntax highlighting to submit if advnaced wasn't
+expanded (#0000016)
 * Removed most references to BBCode without breaking backwards
 compatibility (#000013)
 * Removed a rogue div from the Comments module (#000010)
